// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findWorkordersQuery returns the expected query for multiple ids 1`] = `
"SELECT
DISTINCT ws.pyid work_order_id,
ws.purposeworkarea work_area,
ws.purposecountry country,
ws.aimname aim,
ws.businessarea business_area,
ws.purposename purpose,
ws.speciesforpurpose purpose_species,
ac.pystatuswork ws_status,
ws_loc.entityid location_id,
ws_loc.cphid cph,
ws_c.entityid customer_id,
ws_lu.entityid livestock_unit_id,
ws_f.entityid facility_unit_id,
wsa.wsa_id,
wsa.activity_name,
ws.phase,
wsa.activitysequencenumber,
TO_CHAR(ac.wsactivationdate, 'yyyy-mm-dd"T"hh24:mi:ss') wsactivationdate,
TO_CHAR(ac.wsearliestactivitystartdate, 'yyyy-mm-dd"T"hh24:mi:ss') wsearliestactivitystartdate,
TO_CHAR(ac.pysladeadline, 'yyyy-mm-dd"T"hh24:mi:ss') target_date
-- Dates that don't seem to be used at the moment, but may be useful in the future:
-- TO_CHAR(ac.pxupdatedatetime, 'dd/mm/yyyy hh24:mi:ss') updated_date,
-- TO_CHAR(ac.wsstartdate, 'yyyy-mm-dd') wsstartdate,
-- TO_CHAR(ac.wslatestactivitycompletiondate, 'yyyy-mm-dd"T"hh24:mi:ss') wslatestactivitycompletiondate,


FROM
pega_data.ahwork_ac ac,
pega_Data.index_ac_workschedule ws,
(
  SELECT
  entityid,
  pyid,
  cphid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLocation'
) ws_loc,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleCustomers'
) ws_c,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLivestockUnits'
) ws_lu,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleFacilities'
) ws_f,
(
  SELECT
  SUBSTR(pxcoverinskey, 7) ws_id,
  wsa.pyid wsa_id,
  actname activity_name,
  pystatuswork wsa_status,
  activitysequencenumber

  FROM
  pega_Data.ahwork_ac wsa,
  pega_data.index_ac_activity ac

  WHERE
  wsa.pxinsname = ac.pyid
  AND
  pydescription IS NULL
  AND
  SUBSTR(pxcoverinskey, 6) IS NOT NULL
) wsa

WHERE
ac.pzinskey = ws.pxinsindexedkey
AND
ac.pyid = ws_loc.pyid (+)
AND
ac.pyid = ws_c.pyid(+)
AND
ac.pyid = ws_lu.pyid(+)
AND
ac.pyid = ws_f.pyid(+)
AND
ws.pyid = wsa.ws_id(+)
AND
ac.pxobjclass = 'AH-AC-WS'
AND
ws.pyid IN ('WS-12345', 'WS-12346')
"
`;

exports[`findWorkordersQuery returns the expected query for valid parameters 1`] = `
"SELECT
DISTINCT ws.pyid work_order_id,
ws.purposeworkarea work_area,
ws.purposecountry country,
ws.aimname aim,
ws.businessarea business_area,
ws.purposename purpose,
ws.speciesforpurpose purpose_species,
ac.pystatuswork ws_status,
ws_loc.entityid location_id,
ws_loc.cphid cph,
ws_c.entityid customer_id,
ws_lu.entityid livestock_unit_id,
ws_f.entityid facility_unit_id,
wsa.wsa_id,
wsa.activity_name,
ws.phase,
wsa.activitysequencenumber,
TO_CHAR(ac.wsactivationdate, 'yyyy-mm-dd"T"hh24:mi:ss') wsactivationdate,
TO_CHAR(ac.wsearliestactivitystartdate, 'yyyy-mm-dd"T"hh24:mi:ss') wsearliestactivitystartdate,
TO_CHAR(ac.pysladeadline, 'yyyy-mm-dd"T"hh24:mi:ss') target_date
-- Dates that don't seem to be used at the moment, but may be useful in the future:
-- TO_CHAR(ac.pxupdatedatetime, 'dd/mm/yyyy hh24:mi:ss') updated_date,
-- TO_CHAR(ac.wsstartdate, 'yyyy-mm-dd') wsstartdate,
-- TO_CHAR(ac.wslatestactivitycompletiondate, 'yyyy-mm-dd"T"hh24:mi:ss') wslatestactivitycompletiondate,


FROM
pega_data.ahwork_ac ac,
pega_Data.index_ac_workschedule ws,
(
  SELECT
  entityid,
  pyid,
  cphid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLocation'
) ws_loc,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleCustomers'
) ws_c,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleLivestockUnits'
) ws_lu,
(
  SELECT
  entityid,
  pyid

  FROM
  pega_Data.index_ac_wsentities wsl

  WHERE
  PXINDEXPURPOSE = 'workScheduleFacilities'
) ws_f,
(
  SELECT
  SUBSTR(pxcoverinskey, 7) ws_id,
  wsa.pyid wsa_id,
  actname activity_name,
  pystatuswork wsa_status,
  activitysequencenumber

  FROM
  pega_Data.ahwork_ac wsa,
  pega_data.index_ac_activity ac

  WHERE
  wsa.pxinsname = ac.pyid
  AND
  pydescription IS NULL
  AND
  SUBSTR(pxcoverinskey, 6) IS NOT NULL
) wsa

WHERE
ac.pzinskey = ws.pxinsindexedkey
AND
ac.pyid = ws_loc.pyid (+)
AND
ac.pyid = ws_c.pyid(+)
AND
ac.pyid = ws_lu.pyid(+)
AND
ac.pyid = ws_f.pyid(+)
AND
ws.pyid = wsa.ws_id(+)
AND
ac.pxobjclass = 'AH-AC-WS'
AND
ws.pyid IN ('WS-12345')
"
`;
